--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Sovereign.Land</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="stylesheets/index.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo:400,700|Montserrat:700">
 		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
