finished splash page, added favicon

--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,15 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 	<body>
+		<p id="hiddenmessage">Hello</p>
 		<div id="box">
 			<h1>sovereign.land</h1>
-			<h2>A universal NationStates platform.</h2>
+			<h2>A universal roleplay platform for NationStates regions. <a href="#">Read more &gt;&gt;</a></h2>
+			<form action="region.php" method="get">
+				<input type="text" placeholder="enter region name">
+				<button type="submit" style="float: left;">View Region</button>
+				<button type="submit" style="float: right;" formaction="create.php">Create Page</button>
+			</form>
 		</div>
 	</body>
 </html>
