modified input fields on index and region page

--- a/html/region.html
+++ b/html/region.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<form action="http://google.com/search" method="get" id="searchbar">
-			<input type="text" name="q" placeholder="enter region name and press enter">
+			<input type="text" name="q" placeholder="enter a region name and press enter">
 		</form>
 
 		<div id="titlearea">
