changed links in title section of region viewer

--- a/html/region.html
+++ b/html/region.html
@@ -12,10 +12,10 @@
 		</form>
 
 		<div id="titlearea">
-			<h1>sovereign.land</h1>
-			<h2>Region Name</h2>
+			<h1><a href="http://sovereign.land/">sovereign.land</a></h1>
+			<h2><a href="">Region Name</a></h2>
 			<!--<h3>game player, regional government, security council, founderless, gargantuan, sinker, defender, democratic, offsite forums, world assembly</h3>-->
-			<a href=""><button>View on NationStates</button></a>
+			<a href=""><button>Write New Post</button></a>
 			<a href=""><button>Edit This Page</button></a>
 		</div>
 
