region page .php document, checks and displays region

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 			<h1>sovereign.land</h1>
 			<h2>A universal roleplay platform for NationStates regions. <a href="#">Read more &gt;&gt;</a></h2>
 			<form action="region.php" method="get">
-				<input type="text" placeholder="enter a region name">
+				<input type="text" placeholder="enter a region name" name="r">
 				<button type="submit" style="float: left;">View Region</button>
 				<button type="submit" style="float: right;" formaction="create.php">Create Page</button>
 			</form>
